# mini_infantry

./: .clang-format  CMakeLists.txt
cmake/: FindWiringPi.cmake
config/: pid_cinfig.yaml
include/control/: gimbal.hpp  motion_sovler.hpp  motor copy.hpp  motor.hpp  pid_controller.hpp  rotary_encoder.hpp
include/util/: common.hpp  logger.hpp  logger_init.hpp  periodic_timer.hpp
src/control/: debug_pid.cpp  gimbal.cpp  motion_solver.cpp  motor.cpp  pid_controller.cpp  rotary_encoder.cpp  test1.cpp
src/test/: debug_gimbal_motor.cpp  debug_pid.cpp  test1.cpp  test_logger.cpp  test_motion_solver.cpp
src/util/: logger.cpp  logger_init.cpp
